added bootstrap stylings to sidebar and itemfeed

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,6 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     </head>
     <body>
-        <div id = "todoApp"></div>
+        <main class = "container" id = "todoApp"></main>
     </body>
 </html>
