--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
         <meta charset = "utf-8">
         <title>My First Local App</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+        <link rel = "stylesheet" type = "text/css" href = "http://fonts.googleapis.com/css?family=Lato:400,300,700">
     </head>
     <body>
         <main class = "container" id = "todoApp"></main>
